added browser platform with shaka

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="/scripts/main/enums.js"></script>
     <script src="/scripts/main/app.js"></script>
 
+    <!-- browser -->
+    <script src="https://ajax.googleapis.com/ajax/libs/shaka-player/2.5.10/shaka-player.compiled.js"></script>
+    <script src="/scripts/platforms/browser/protectedPlayer.js"></script>
+
     <!-- tizen - player -->
     <script src="/scripts/platforms/tizen/protectedPlayer.js"></script>
     <script type="text/javascript" src="$WEBAPIS/webapis/webapis.js"></script>
