--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
     <div id="playerWrapper"></div>
     <input type="button" onclick="window.app.player.play();" value="play" />
     <input type="button" onclick="window.app.player.pause();" value="pause" />
+    <input
+      type="button"
+      onclick="console.log(window.app.player.uiVideo.error);"
+      value="Log Error"
+    />
+    <input
+      type="button"
+      onclick="window.app.player.uiVideo.currentTime = (60*32)"
+      value="Ir para 32 minutos"
+    />
     <div id="log_stash"></div>
 
     <script>
@@ -37,19 +47,15 @@
       window.app.player.appendPlayer(uiPlayerWrapper);
 
       const playbackInfo = {
-        dash:
-          'https://bitmovin-a.akamaihd.net/content/art-of-motion_drm/mpds/11331.mpd',
-        hls:
-          'https://bitmovin-a.akamaihd.net/content/art-of-motion_drm/m3u8s/11331.m3u8',
-        smooth:
-          'https://test.playready.microsoft.com/smoothstreaming/SSWSS720H264/SuperSpeedway_720.ism/manifest',
+        dash: '',
+        hls: '',
+        smooth: '',
         drm: {
           widevine: {
-            LA_URL: 'https://widevine-proxy.appspot.com/proxy',
+            LA_URL: '',
           },
           playready: {
-            LA_URL:
-              'https://playready.directtaps.net/pr/svc/rightsmanager.asmx?PlayRight=1&ContentKey=EAtsIJQPd5pFiRUrV9Layw==',
+            LA_URL: '',
           },
         },
       };
